# labor_market_simulation

./: .gitignore  README.md  pyproject.toml
docs/: 00_index.md  01_sop.md  05_evolution.md  10_concept_v1.md  10_concept_v2.md  10_concept_v3.md  10_concept_v4_task-ontology.md  10_concept_v5_open-endgame.md  20_spec_v4.md  30_exp_L0.1.0.md  30_exp_L0.2.0.md  30_exp_L0.3.0.md  30_exp_ledger.md  40_log_20260703_open-endgame-discussion.md  50_sparks.md  90_raw_20260701_gemini-rgb.md  90_raw_20260701_next-task-brief.md  90_raw_20260703_spec-v4-draft.md  90_raw_20260703_task-ontology-draft.md  ITERATION_LOG.md  NEXT_TASK_BRIEF.md  RESEARCH_REVIEW_v0.1.0.md  RESEARCH_REVIEW_v0.2.0.md  v1.md  v2.md  v3.md  v4.md
notebooks/: L_0.2.2.ipynb  L_0.3.0.ipynb
paper/: 參考文獻_v5待補_動力學與歷史線.md  參考文獻與文獻回顧.docx
results/L_0.1.0/: manifest.json
results/L_0.2.0/: manifest.json  summary.json
results/L_0.2.0/data/: baseline_timeseries.csv  critical_frontier_r_star.csv  phase_distribution_gini_employed.csv  phase_distribution_top10.csv  phase_macro_employment.csv  process_occupation.csv  process_skill.csv  sensitivity.csv
results/L_0.2.1/: manifest.json  summary.json
results/L_0.2.2/: manifest.json  summary.json
results/L_0.2.2/data/: baseline_v022.csv
results/L_0.3.0/: manifest.json  summary.json
results/L_0.3.0/data/: engels_pause_probe.csv  intermediate_arc.csv  phase_g_ceiling.csv  phase_r_ceiling.csv
scripts/: process.py  run.py  run_v021.py  sensitivity.py  sweep.py
src/labor_sim/: __init__.py  config.py  metrics.py  model.py  output.py  plotutil.py  world.py
(+8 files in other folders)
