[project]
name = "labor-sim"
version = "0.1.0"
description = "AI 時代勞動市場演化模擬：第一性原理最小核心（三純量 + 一條規則）"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/labor_sim"]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "nbconvert>=7.17.1",
]
